1 New project: a Javascript version of Turtle Blocks
  * block manipluation