@@ -21,11 +21,11 @@
     <div id="loader"></div>
 
     <header id="header" class="EaselJS">
-        <h1>Make stacks of blocks; click on them to run.</h1>
+        <h1>Make stacks of blocks; click on the star to run them.</h1>
     </header>
 
     <div class="canvasHolder">
-        <canvas id="myCanvas" width="800" height="600"></canvas>
+        <canvas id="myCanvas" width="1200" height="900"></canvas>
 
     <div id="labelDiv"></div>
     <div id="inputDiv"></div>
