@@ -1,2 +1,10 @@
 1 New project: a Javascript version of Turtle Blocks
-  * block manipluation
+  * basic block manipluation
+  * basic block execution
+
+TODO:
+  * decide on a palette strategy
+  * implement more sophisticated blocks
+  * add controls for rabbit vs turtle
+  * add controls for clear
+  * add controls for show/hide
